force-app/main/default/objects/Account/fields/Account_Holder_or_benefi__c.field-meta.xml
<CustomField>
    <fullName>Account_Holder_or_benefi__c</fullName>
    <description>Name of the organization as  appearing in Bank Account - Account holder (or) Beneficiary Name</description>
    <inlineHelpText>Name of the organization as  appearing in Bank Account - Account holder (or) Beneficiary Name</inlineHelpText>
    <label>Bank Account Holder or Beneficiery Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>