force-app/main/default/objects/Account/fields/Accrediations_held_by_the_Engineers__c.field-meta.xml
<CustomField>
    <fullName>Accrediations_held_by_the_Engineers__c</fullName>
    <label>Accrediations held by the Engineers</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MCSE</fullName>
            </value>
            <value>
                <fullName>A+</fullName>
            </value>
            <value>
                <fullName>CCNA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>