force-app/main/default/objects/Account/fields/Ample_Color_Image__c.field-meta.xml
<CustomField>
    <fullName>Ample_Color_Image__c</fullName>
    <formula>IMAGE(&quot;/sfc/servlet.shepherd/version/download/068N0000001X2oy&quot;,&quot;ample&quot; , 30, 30)</formula>
    <label>Ample Color Image</label>
    <type>Text</type>
</CustomField>