force-app/main/default/objects/Account/fields/Approval_status_head__c.field-meta.xml
<CustomField>
    <fullName>Approval_status_head__c</fullName>
    <label>Approval status by head</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rework</fullName>
            </value>
            <value>
                <fullName>Sent to FSM Head</fullName>
            </value>
            <value>
                <fullName>Sent to Finance Head</fullName>
            </value>
            <value>
                <fullName>Approved by Finance Head</fullName>
            </value>
            <value>
                <fullName>Draft</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>