force-app/main/default/objects/Account/fields/Award_Details__c.field-meta.xml
<CustomField>
    <fullName>Award_Details__c</fullName>
    <label>Award Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>