force-app/main/default/objects/Account/fields/Bank_Account_Number_Clabe_CCI__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account_Number_Clabe_CCI__c</fullName>
    <description>Bank Account Number / Clabe # for Mexico / CCI # for Peru</description>
    <inlineHelpText>Bank Account Number / Clabe # for Mexico / CCI # for Peru</inlineHelpText>
    <label>Bank Account Number / Clabe / CCI</label>
    <length>100</length>
    <type>Text</type>
</CustomField>