force-app/main/default/objects/Account/fields/Bank_Code__c.field-meta.xml
<CustomField>
    <fullName>Bank_Code__c</fullName>
    <label>Bank Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>