force-app/main/default/objects/Account/fields/Bank_ID__c.field-meta.xml
<CustomField>
    <fullName>Bank_ID__c</fullName>
    <label>Bank ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>