force-app/main/default/objects/Account/fields/Bank_Name_Where_Account_Maintained__c.field-meta.xml
<CustomField>
    <fullName>Bank_Name_Where_Account_Maintained__c</fullName>
    <label>Bank Name Where Account Maintained</label>
    <length>100</length>
    <type>Text</type>
</CustomField>