force-app/main/default/objects/Account/fields/Benen_Bank_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Benen_Bank_Account_Type__c</fullName>
    <label>Benen Bank Account Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>