force-app/main/default/objects/Account/fields/Branch_Address_Bank__c.field-meta.xml
<CustomField>
    <fullName>Branch_Address_Bank__c</fullName>
    <label>Branch Address(Bank)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>