force-app/main/default/objects/Account/fields/Branch_Code__c.field-meta.xml
<CustomField>
    <fullName>Branch_Code__c</fullName>
    <label>Branch Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>