force-app/main/default/objects/Account/fields/Branch_Country__c.field-meta.xml
<CustomField>
    <fullName>Branch_Country__c</fullName>
    <description>Bank Branch Country</description>
    <label>Branch Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Countries</valueSetName>
    </valueSet>
</CustomField>