force-app/main/default/objects/Account/fields/BSB_Code__c.field-meta.xml
<CustomField>
    <fullName>BSB_Code__c</fullName>
    <label>BSB Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>