force-app/main/default/objects/Account/fields/Call_Logging_Process__c.field-meta.xml
<CustomField>
    <fullName>Call_Logging_Process__c</fullName>
    <label>Call Logging Process</label>
    <length>100</length>
    <type>Text</type>
</CustomField>