force-app/main/default/objects/Account/fields/Can_the_company_provide_24x7_support__c.field-meta.xml
<CustomField>
    <fullName>Can_the_company_provide_24x7_support__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Can the company provide 24x7 support?</label>
    <type>Checkbox</type>
</CustomField>