force-app/main/default/objects/Account/fields/Cancel_Check_of_Bank_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Check_of_Bank_Account_Number__c</fullName>
    <label>Cancel Check of Bank Account Number</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>