force-app/main/default/objects/Account/fields/Captured_through_Vendor_Enquiry__c.field-meta.xml
<CustomField>
    <fullName>Captured_through_Vendor_Enquiry__c</fullName>
    <defaultValue>false</defaultValue>
    <description>It will be true if the vendor is created through vendor enquiry form and then converted into vendor record.</description>
    <label>Captured through Vendor Enquiry?</label>
    <type>Checkbox</type>
</CustomField>