force-app/main/default/objects/Account/fields/Certificate_of_Incorporate_Registration__c.field-meta.xml
<CustomField>
    <fullName>Certificate_of_Incorporate_Registration__c</fullName>
    <inlineHelpText>Certificates of Incorporation / Company Registration Certificate</inlineHelpText>
    <label>Certificate of Incorporate/Registration</label>
    <length>100</length>
    <type>Text</type>
</CustomField>