force-app/main/default/objects/Account/fields/Certified_partner_for_OEMs__c.field-meta.xml
<CustomField>
    <fullName>Certified_partner_for_OEMs__c</fullName>
    <label>Certified partner for OEMs</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dell</fullName>
            </value>
            <value>
                <fullName>HP</fullName>
            </value>
            <value>
                <fullName>Lenovo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>