force-app/main/default/objects/Account/fields/Communication_Method__c.field-meta.xml
<CustomField>
    <fullName>Communication_Method__c</fullName>
    <label>Communication Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>