force-app/main/default/objects/Account/fields/Company_customers_products_and_services__c.field-meta.xml
<CustomField>
    <fullName>Company_customers_products_and_services__c</fullName>
    <inlineHelpText>Please list the company&apos;s top 3 customers and the products and services  provided to these customers</inlineHelpText>
    <label>Company customers products and services</label>
    <length>100</length>
    <type>Text</type>
</CustomField>