force-app/main/default/objects/Account/fields/Company_Group__c.field-meta.xml
<CustomField>
    <fullName>Company_Group__c</fullName>
    <description>Text field to hold company information e.g. company name</description>
    <label>Company Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>