force-app/main/default/objects/Account/fields/company_have_automated_web_access_for_lo__c.field-meta.xml
<CustomField>
    <fullName>company_have_automated_web_access_for_lo__c</fullName>
    <inlineHelpText>Does the company have automated web access for logging calls?</inlineHelpText>
    <label>company web access for logging calls?</label>
    <length>100</length>
    <type>Text</type>
</CustomField>