force-app/main/default/objects/Account/fields/Company_s_LinkedIN_Profile__c.field-meta.xml
<CustomField>
    <fullName>Company_s_LinkedIN_Profile__c</fullName>
    <label>Company&apos;s LinkedIN Profile</label>
    <length>100</length>
    <type>Text</type>
</CustomField>