force-app/main/default/objects/Account/fields/Country_Headquartered__c.field-meta.xml
<CustomField>
    <fullName>Country_Headquartered__c</fullName>
    <label>Country Headquartered</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Countries</valueSetName>
    </valueSet>
</CustomField>