force-app/main/default/objects/Account/fields/Customer_Code__c.field-meta.xml
<CustomField>
    <fullName>Customer_Code__c</fullName>
    <label>Customer Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>