force-app/main/default/objects/Account/fields/Customers_whom_TIG_may_contact_reference__c.field-meta.xml
<CustomField>
    <fullName>Customers_whom_TIG_may_contact_reference__c</fullName>
    <inlineHelpText>Please Share the details 2 customers whom TIG may contact for a reference</inlineHelpText>
    <label>Customers whom TIG may contact reference</label>
    <length>100</length>
    <type>Text</type>
</CustomField>