force-app/main/default/objects/Account/fields/Date_of_Expiry_DD__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Expiry_DD__c</fullName>
    <label>Date of Expiry (DD)</label>
    <type>Date</type>
</CustomField>