force-app/main/default/objects/Account/fields/Date_of_Expiry_MSA__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Expiry_MSA__c</fullName>
    <label>Date of Expiry(MSA)</label>
    <type>Date</type>
</CustomField>