force-app/main/default/objects/Account/fields/Date_of_Signature_NDA__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Signature_NDA__c</fullName>
    <label>Date of Signature(NDA)</label>
    <type>Date</type>
</CustomField>