force-app/main/default/objects/Account/fields/Do_you_accept_bank_payments_in_EURO__c.field-meta.xml
<CustomField>
    <fullName>Do_you_accept_bank_payments_in_EURO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do you accept bank payments in EURO€</label>
    <type>Checkbox</type>
</CustomField>