force-app/main/default/objects/Account/fields/Do_you_have_a_multi_lingual_Helpdesk__c.field-meta.xml
<CustomField>
    <fullName>Do_you_have_a_multi_lingual_Helpdesk__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do you have a multi lingual Helpdesk?</label>
    <type>Checkbox</type>
</CustomField>