force-app/main/default/objects/Account/fields/Do_you_perform_hardware_disposal_activit__c.field-meta.xml
<CustomField>
    <fullName>Do_you_perform_hardware_disposal_activit__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Do you perform hardware disposal activities?</inlineHelpText>
    <label>Do you perform hardware disposal.</label>
    <type>Checkbox</type>
</CustomField>