force-app/main/default/objects/Account/fields/Due_Diligence__c.field-meta.xml
<CustomField>
    <fullName>Due_Diligence__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Due Diligence Partner</label>
    <referenceTo>Due_Diligence__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>