force-app/main/default/objects/Account/fields/Due_Diligence_Status__c.field-meta.xml
<CustomField>
    <fullName>Due_Diligence_Status__c</fullName>
    <label>Due Diligence  Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>