force-app/main/default/objects/Account/fields/English_speaking_Engineers_for_support__c.field-meta.xml
<CustomField>
    <fullName>English_speaking_Engineers_for_support__c</fullName>
    <inlineHelpText>No. of English speaking Engineers for support.</inlineHelpText>
    <label>English speaking Engineers for support</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>