force-app/main/default/objects/Account/fields/English_speaking_engineers_for_TIG__c.field-meta.xml
<CustomField>
    <fullName>English_speaking_engineers_for_TIG__c</fullName>
    <inlineHelpText>Provision for English speaking engineers for TIG.</inlineHelpText>
    <label>English speaking engineers for TIG</label>
    <length>100</length>
    <type>Text</type>
</CustomField>