force-app/main/default/objects/Account/fields/Escalation_Matrix__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Matrix__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Escalation Matrix</label>
    <type>Checkbox</type>
</CustomField>