force-app/main/default/objects/Account/fields/Financial_Informatio__c.field-meta.xml
<CustomField>
    <fullName>Financial_Informatio__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Financial Informatio</label>
    <type>Checkbox</type>
</CustomField>