force-app/main/default/objects/Account/fields/Green_Color_Image__c.field-meta.xml
<CustomField>
    <fullName>Green_Color_Image__c</fullName>
    <formula>IMAGE(&quot;/sfc/servlet.shepherd/version/download/068N0000001X2p3&quot;,&quot;green&quot; , 30, 30)</formula>
    <label>Green Color Image</label>
    <type>Text</type>
</CustomField>