force-app/main/default/objects/Account/fields/GSTVAT_Registration_Certificate__c.field-meta.xml
<CustomField>
    <fullName>GSTVAT_Registration_Certificate__c</fullName>
    <label>GST/VAT Registration Certificate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>