force-app/main/default/objects/Account/fields/GSTVAT_Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>GSTVAT_Registration_Number__c</fullName>
    <label>GST/VAT Registration Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>