force-app/main/default/objects/Account/fields/International_Bank_Account_Number_IBAN__c.field-meta.xml
<CustomField>
    <fullName>International_Bank_Account_Number_IBAN__c</fullName>
    <label>International Bank Account Number (IBAN)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>