force-app/main/default/objects/Account/fields/Is_Company_Awarded__c.field-meta.xml
<CustomField>
    <fullName>Is_Company_Awarded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Company Awarded?</label>
    <type>Checkbox</type>
</CustomField>