force-app/main/default/objects/Account/fields/Is_MSA_Required__c.field-meta.xml
<CustomField>
    <fullName>Is_MSA_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is MSA Required ?</label>
    <type>Checkbox</type>
</CustomField>