force-app/main/default/objects/Account/fields/List_of_Market_Sector__c.field-meta.xml
<CustomField>
    <fullName>List_of_Market_Sector__c</fullName>
    <inlineHelpText>Please list the market sectors in which the company provides it&apos;s products and services.</inlineHelpText>
    <label>List of Market Sector</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Demo</fullName>
            </value>
            <value>
                <fullName>Data</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>