force-app/main/default/objects/Account/fields/MICR_Code__c.field-meta.xml
<CustomField>
    <fullName>MICR_Code__c</fullName>
    <label>MICR Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>