force-app/main/default/objects/Account/fields/MSA_Required__c.field-meta.xml
<CustomField>
    <fullName>MSA_Required__c</fullName>
    <label>MSA Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not-Required</fullName>
                <isActive>false</isActive>
                <label>Not-Required</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>