force-app/main/default/objects/Account/fields/No_of_employees_on_your_Direct_payroll__c.field-meta.xml
<CustomField>
    <fullName>No_of_employees_on_your_Direct_payroll__c</fullName>
    <label>No. of employees on your Direct payroll?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>