force-app/main/default/objects/Account/fields/Number_of_Support_Call_per_Month__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Support_Call_per_Month__c</fullName>
    <inlineHelpText>How many support calls (Software &amp; Hardware) does the company receive per month?</inlineHelpText>
    <label>Number of Support Call per Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>