force-app/main/default/objects/Account/fields/One_Time_Vendor__c.field-meta.xml
<CustomField>
    <fullName>One_Time_Vendor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>One Time Vendor</label>
    <type>Checkbox</type>
</CustomField>