force-app/main/default/objects/Account/fields/Other_service_which_company_can_provide__c.field-meta.xml
<CustomField>
    <fullName>Other_service_which_company_can_provide__c</fullName>
    <inlineHelpText>Please list any other services which company can provide?</inlineHelpText>
    <label>Other service which company can provide?</label>
    <type>TextArea</type>
</CustomField>