force-app/main/default/objects/Account/fields/Overall_Normalized_Partnership_RAG__c.field-meta.xml
<CustomField>
    <fullName>Overall_Normalized_Partnership_RAG__c</fullName>
    <formula>IF( ISNULL( Overall_Normalized_Partnership_Score__c) ,&quot;&quot;,
IF( Overall_Normalized_Partnership_Score__c &lt;=50, Red_Color_Image__c ,IF(Overall_Normalized_Partnership_Score__c &lt;80,Ample_Color_Image__c,Green_Color_Image__c) ))</formula>
    <label>Overall Normalized Partnership RAG</label>
    <type>Text</type>
</CustomField>