force-app/main/default/objects/Account/fields/Overall_Normalized_Partnership_Score__c.field-meta.xml
<CustomField>
    <fullName>Overall_Normalized_Partnership_Score__c</fullName>
    <formula>Due_Diligence__r.Overall_Normalized_Partnership_Score__c</formula>
    <label>Overall Normalized Partnership Score %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>