force-app/main/default/objects/Account/fields/Partner_Expense_Type__c.field-meta.xml
<CustomField>
    <fullName>Partner_Expense_Type__c</fullName>
    <label>Partner Expense Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>Indirect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>