force-app/main/default/objects/Account/fields/partner_presence__c.field-meta.xml
<CustomField>
    <fullName>partner_presence__c</fullName>
    <defaultValue>false</defaultValue>
    <label>partner presence</label>
    <type>Checkbox</type>
</CustomField>