force-app/main/default/objects/Account/fields/Primary_Business_Contact_Information__c.field-meta.xml
<CustomField>
    <fullName>Primary_Business_Contact_Information__c</fullName>
    <label>Primary Business Contact Information</label>
    <length>100</length>
    <type>Text</type>
</CustomField>