force-app/main/default/objects/Account/fields/Provisions_for_Health_Safety__c.field-meta.xml
<CustomField>
    <fullName>Provisions_for_Health_Safety__c</fullName>
    <inlineHelpText>Please state what provisions are in place for Health &amp; Safety</inlineHelpText>
    <label>Provisions for Health &amp; Safety</label>
    <type>TextArea</type>
</CustomField>