force-app/main/default/objects/Account/fields/Red_Color_Image__c.field-meta.xml
<CustomField>
    <fullName>Red_Color_Image__c</fullName>
    <formula>IMAGE(&quot;/sfc/servlet.shepherd/version/download/068N0000001X2p8&quot;,&quot;red&quot; , 30, 30)</formula>
    <label>Red Color Image</label>
    <type>Text</type>
</CustomField>