force-app/main/default/objects/Account/fields/Service_Tax_Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>Service_Tax_Registration_Number__c</fullName>
    <label>Service Tax Registration Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>