force-app/main/default/objects/Account/fields/State_Bank__c.field-meta.xml
<CustomField>
    <fullName>State_Bank__c</fullName>
    <label>State(Bank)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>