force-app/main/default/objects/Account/fields/Statutory_Details__c.field-meta.xml
<CustomField>
    <fullName>Statutory_Details__c</fullName>
    <label>Statutory Details</label>
    <length>100</length>
    <type>Text</type>
</CustomField>