force-app/main/default/objects/Account/fields/TAX_Identification_Number__c.field-meta.xml
<CustomField>
    <fullName>TAX_Identification_Number__c</fullName>
    <label>TAX Identification Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>