force-app/main/default/objects/Account/fields/Tax_Information__c.field-meta.xml
<CustomField>
    <fullName>Tax_Information__c</fullName>
    <label>Tax Information</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>GST/Vat</fullName>
            </value>
            <value>
                <fullName>Service Tax</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>