force-app/main/default/objects/Account/fields/TaxID_RUT_CUIT_Number__c.field-meta.xml
<CustomField>
    <fullName>TaxID_RUT_CUIT_Number__c</fullName>
    <label>TaxID/RUT/CUIT Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>