force-app/main/default/objects/Account/fields/Total_Amount_of_Vendor_Projects__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_of_Vendor_Projects__c</fullName>
    <description>fetch value automatically from the Apex and using it in the approval process; the Total Amount of All Vendor Projects against a Vendor Account Associated with Customer Projects

Remarks:- 19-May-2021 not updating this field and also not using this field in the approval process of Order object</description>
    <inlineHelpText>Total Amount of All Vendor Projects associated with a Vendor Account</inlineHelpText>
    <label>Total Amount of All Vendor Projects</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>