force-app/main/default/objects/Account/fields/Trade_Name__c.field-meta.xml
<CustomField>
    <fullName>Trade_Name__c</fullName>
    <description>It is at Group Level</description>
    <label>Trade Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>