force-app/main/default/objects/Account/fields/Transit_Number__c.field-meta.xml
<CustomField>
    <fullName>Transit_Number__c</fullName>
    <label>Transit Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>