force-app/main/default/objects/Account/fields/Type_of_Partner__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Partner__c</fullName>
    <label>Type of Partner</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contractor</fullName>
            </value>
            <value>
                <fullName>Service Provider</fullName>
            </value>
            <value>
                <fullName>Indirect</fullName>
            </value>
            <value>
                <fullName>Payroll Engineers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>