force-app/main/default/objects/Account/fields/Type_of_Service_Agreements__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Service_Agreements__c</fullName>
    <inlineHelpText>Please list the type of service agreements the company can provide.</inlineHelpText>
    <label>Type of Service Agreements</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full Time Engineer Monthly</fullName>
            </value>
            <value>
                <fullName>Full Time Engineer Annually</fullName>
            </value>
            <value>
                <fullName>Annual Maintenance</fullName>
            </value>
            <value>
                <fullName>Per Ticket Model</fullName>
            </value>
            <value>
                <fullName>Time &amp; Material</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>