force-app/main/default/objects/Account/fields/Vendor_capability__c.field-meta.xml
<CustomField>
    <fullName>Vendor_capability__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vendor capability</label>
    <type>Checkbox</type>
</CustomField>